- Add Donation Data - Updated Types + add new ShelterType - Add initial Page for displaying possible QR-Codes - Add public env-var "HOST"

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 # Public variables
-STRIPE_PUBLISHABLE_KEY=
+NEXT_PUBLIC_HOST=https://localhost:3000
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 
 # Secret variables
 STRIPE_SECRET_KEY=
-
