--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
-    "@chakra-ui/react": "^1.6.2",
+    "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@stripe/stripe-js": "^1.15.0",
+    "@types/qrcode.react": "^1.0.1",
     "@types/react-router-dom": "^5.1.7",
-    "framer-motion": "3.10.6",
+    "framer-motion": "^4",
     "i18next": "^20.2.4",
     "i18next-browser-languagedetector": "^6.1.1",
     "i18next-http-backend": "^1.2.4",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "next": "10.2.0",
+    "qrcode.react": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-error-boundary": "^3.1.3",
+    "react-hook-form": "^7.6.7",
     "react-i18next": "^11.8.15",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
