--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # Public variables
-NEXT_PUBLIC_HOST=https://localhost:3000
+NEXT_PUBLIC_HOST=http://localhost:3000
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 
 # Secret variables
